# Translator

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
Translator/: __init__.py  __main__.py  server.py  tokenizer.py  train.py  transformer.py
data/: imdb.model  imdb.vocab  spm_model.model  spm_model.vocab
templates/: index.html
tests/: test_layers.py  test_tokenizer.py
website/: __main__.py  main.py
