[tool.poetry]
name = "translator"
version = "0.1.0"
description = ""
authors = ["Sashavav"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pre-commit = "^4.2.0"
pytest = "^8.3.5"
torch = "^2.6.0"
tqdm = "^4.67.1"
scikit-learn = "^1.6.1"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
einops = "^0.8.1"
sentencepiece = "^0.2.0"
python-multipart = "^0.0.20"
transformers = "^4.51.3"
huggingface-hub = "^0.31.4"
datasets = "^3.6.0"
huggingface = "^0.0.1"
pydantic = "^2.11.4"
mlflow = "^2.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
